//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id BigInt [pk, increment]
  code String [unique, not null]
  type AccountType [not null]
  status AccountStatus [not null, default: 'Active']
  phone String [unique]
  email String [unique]
  username String [unique]
  password String
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Profile {
  id BigInt [pk]
  gender Gender
  name String
  date_of_birth DateTime
  avatar_rs_id BigInt [unique]
  email_verified Boolean [not null, default: false]
  phone_verified Boolean [not null, default: false]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Customer {
  id BigInt [pk]
  default_address_id BigInt
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Vendor {
  id BigInt [pk]
  description String [not null, default: '']
}

Table IncomeHistory {
  id BigInt [pk, increment]
  account_id BigInt [not null]
  type String [not null]
  income BigInt [not null]
  current_balance BigInt [not null]
  note String
  date_created DateTime [default: `now()`, not null]
  hash Bytes [unique, not null]
  prev_hash Bytes [not null]
}

Table Notification {
  id BigInt [pk, increment]
  account_id BigInt [not null]
  type String [not null]
  channel String [not null]
  is_read Boolean [not null, default: false]
  content String [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
  date_sent DateTime
  date_scheduled DateTime
}

Table CartItem {
  id BigInt [pk, increment]
  cart_id BigInt [not null]
  sku_id BigInt [not null]
  quantity BigInt [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]

  indexes {
    (cart_id, sku_id) [unique]
  }
}

Table Address {
  id BigInt [pk, increment]
  code String [unique, not null]
  account_id BigInt [not null]
  type AddressType [not null, default: 'Home']
  full_name String [not null]
  phone String [not null]
  phone_verified Boolean [not null, default: false]
  address_line String [not null]
  city String [not null]
  state_province String [not null]
  country String [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Brand {
  id BigInt [pk, increment]
  code String [unique, not null]
  name String [not null]
  description String [not null]
}

Table ProductCategory {
  id BigInt [pk, increment]
  name String [unique, not null]
  description String [not null, default: '']
  parent_id BigInt
}

Table ProductSpu {
  id BigInt [pk, increment]
  code String [unique, not null]
  account_id BigInt [not null]
  category_id BigInt [not null]
  brand_id BigInt [not null]
  name String [not null]
  description String [not null]
  is_active Boolean [not null, default: true]
  date_manufactured DateTime [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
  date_deleted DateTime
}

Table ProductSku {
  id BigInt [pk, increment]
  code String [unique, not null]
  spu_id BigInt [not null]
  price BigInt [not null]
  can_combine Boolean [not null, default: false]
  date_created DateTime [default: `now()`, not null]
  date_deleted DateTime
}

Table ProductSkuAttribute {
  id BigInt [pk, increment]
  code String [unique, not null]
  sku_id BigInt [not null]
  name String [not null]
  value String [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Tag {
  id BigInt [pk, increment]
  tag String [unique, not null]
  description String [not null, default: '']
}

Table ProductTag {
  id BigInt [pk, increment]
  spu_id BigInt [not null]
  tag_id BigInt [not null]

  indexes {
    (spu_id, tag_id) [unique]
  }
}

Table Comment {
  id BigInt [pk, increment]
  code String [unique, not null]
  account_id BigInt [not null]
  ref_type CommentRefType [not null]
  ref_id BigInt [not null]
  body String [not null]
  upvote BigInt [not null, default: 0]
  downvote BigInt [not null, default: 0]
  score Int [not null, default: 0]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table ProductSerial {
  id BigInt [pk, increment]
  serial_number String [unique, not null]
  sku_id BigInt [not null]
  status ProductStatus [not null]
  date_created DateTime [default: `now()`, not null]
}

Table Stock {
  id BigInt [pk, increment]
  ref_type StockType [not null]
  ref_id BigInt [not null]
  current_stock BigInt [not null, default: 0]
  sold BigInt [not null, default: 0]
  date_created DateTime [default: `now()`, not null]

  indexes {
    (ref_id, ref_type) [unique]
  }
}

Table StockHistory {
  id BigInt [pk, increment]
  stock_id BigInt [not null]
  change BigInt [not null]
  date_created DateTime [default: `now()`, not null]
}

Table Order {
  id BigInt [pk, increment]
  code String [unique, not null]
  customer_id BigInt [not null]
  payment_method PaymentMethod [not null]
  status Status [not null]
  address String [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [not null]
}

Table OrderItem {
  id BigInt [pk, increment]
  code String [unique, not null]
  order_id BigInt [not null]
  sku_id BigInt [not null]
  quantity BigInt [not null]
}

Table OrderItemSerial {
  id BigInt [pk, increment]
  order_item_id BigInt [not null]
  product_serial_id BigInt [not null]

  indexes {
    (order_item_id, product_serial_id) [unique]
  }
}

Table PaymentVnpay {
  id BigInt [pk]
  vnp_Amount String [not null]
  vnp_BankCode String [not null]
  vnp_CardType String [not null]
  vnp_OrderInfo String [not null]
  vnp_PayDate String [not null]
  vnp_ResponseCode String [not null]
  vnp_SecureHash String [not null]
  vnp_TmnCode String [not null]
  vnp_TransactionNo String [not null]
  vnp_TransactionStatus String [not null]
  vnp_TxnRef String [not null]
}

Table Refund {
  id BigInt [pk, increment]
  code String [unique, not null]
  order_item_id BigInt [not null]
  reviewed_by_id BigInt
  method RefundMethod [not null]
  status Status [not null]
  reason String [not null]
  address String
  date_created DateTime [default: `now()`, not null]
}

Table RefundDispute {
  id BigInt [pk, increment]
  code String [unique, not null]
  refund_id BigInt [not null]
  issued_by_id BigInt [not null]
  reason String [not null]
  status Status [not null, default: 'Pending']
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [not null]
}

Table Invoice {
  id BigInt [pk, increment]
  code String [unique, not null]
  type InvoiceType [not null]
  ref_type InvoiceRefType [not null]
  ref_id BigInt [not null]
  seller_account_id BigInt
  buyer_account_id BigInt [not null]
  status Status [not null]
  payment_method PaymentMethod [not null]
  address String [not null]
  phone String [not null]
  subtotal BigInt [not null]
  total BigInt [not null]
  file_rs_id String [not null]
  date_created DateTime [default: `now()`, not null]
  hash Bytes [unique, not null]
  prev_hash Bytes [not null]
}

Table InvoiceItem {
  id BigInt [pk, increment]
  invoice_id BigInt [not null]
  snapshot Json [not null]
  quantity BigInt [not null]
  unit_price BigInt [not null]
  subtotal BigInt [not null]
  total BigInt [not null]
}

Table Promotion {
  id BigInt [pk, increment]
  code String [unique, not null]
  owner_id BigInt
  ref_type PromotionRefType [not null]
  ref_id BigInt
  type PromotionType [not null]
  title String [not null]
  description String
  is_active Boolean [not null, default: true]
  date_started DateTime [default: `now()`, not null]
  date_ended DateTime
  schedule_tz String
  schedule_start DateTime
  schedule_duration Int
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [not null]
}

Table PromotionDiscount {
  id BigInt [pk]
  order_wide Boolean [not null]
  min_spend BigInt [not null, default: 0]
  max_discount BigInt [not null, default: 0]
  discount_percent Int
  discount_price BigInt
}

Table Resource {
  id BigInt [pk, increment]
  mime_type String [not null]
  owner_id BigInt [not null]
  owner_type ResourceType [not null]
  url String [not null]
  order Int [not null]
}

Table Event {
  id BigInt [pk, increment]
  account_id BigInt
  aggregate_id BigInt [not null]
  aggregate_type String [not null]
  event_type EventType [not null]
  payload Json [not null]
  version BigInt [not null]
  date_created DateTime [default: `now()`, not null]
}

Table SearchSync {
  id BigInt [pk, increment]
  name String [not null]
  last_synced DateTime [default: `now()`, not null]
}

Enum AccountType {
  Customer
  Vendor
}

Enum AccountStatus {
  Active
  Suspended
}

Enum Gender {
  Male
  Female
  Other
}

Enum AddressType {
  Home
  Work
}

Enum CommentRefType {
  ProductSPU
  Comment
}

Enum StockType {
  ProductSKU
  Promotion
}

Enum ProductStatus {
  Active
  Inactive
  Sold
  Damaged
}

Enum PaymentMethod {
  COD
  Card
  EWallet
  Crypto
}

Enum RefundMethod {
  PickUp
  DropOff
}

Enum InvoiceType {
  Sale
  Service
  Adjustment
}

Enum InvoiceRefType {
  Order
  Fee
}

Enum PromotionType {
  Discount
  Bundle
  BuyXGetY
  Cashback
}

Enum PromotionRefType {
  All
  ProductSpu
  ProductSku
  Category
  Brand
}

Enum ResourceType {
  Account
  ProductSpu
  ProductSku
  Brand
  Refund
  ReturnDispute
}

Enum Status {
  Pending
  Processing
  Success
  Canceled
  Failed
}

Enum EventType {
  Created
  Updated
  Deleted
}

Ref: Profile.id - Account.id [delete: Cascade]

Ref: Customer.id - Account.id [delete: Cascade]

Ref: Vendor.id - Account.id [delete: Cascade]

Ref: IncomeHistory.account_id > Vendor.id [delete: Cascade]

Ref: Notification.account_id > Account.id [delete: Cascade]

Ref: CartItem.cart_id > Customer.id [delete: Cascade]

Ref: CartItem.sku_id > ProductSku.id [delete: No Action]

Ref: Address.account_id > Account.id [delete: Cascade]

Ref: ProductSpu.account_id > Vendor.id [delete: Cascade]

Ref: ProductSpu.category_id > ProductCategory.id [delete: Cascade]

Ref: ProductSpu.brand_id > Brand.id [delete: Cascade]

Ref: ProductSku.spu_id > ProductSpu.id [delete: Cascade]

Ref: ProductSkuAttribute.sku_id > ProductSku.id [delete: Cascade]

Ref: ProductTag.spu_id > ProductSpu.id [delete: Cascade]

Ref: ProductTag.tag_id > Tag.id [delete: Cascade]

Ref: Comment.account_id > Account.id [delete: Cascade]

Ref: ProductSerial.sku_id > ProductSku.id [delete: Cascade]

Ref: StockHistory.stock_id > Stock.id [delete: Cascade]

Ref: Order.customer_id > Customer.id [delete: Cascade]

Ref: OrderItem.order_id > Order.id [delete: Cascade]

Ref: OrderItem.sku_id > ProductSku.id [delete: No Action]

Ref: OrderItemSerial.order_item_id > OrderItem.id [delete: Cascade]

Ref: OrderItemSerial.product_serial_id > ProductSerial.id [delete: No Action]

Ref: PaymentVnpay.id - Order.id [delete: Cascade]

Ref: Refund.order_item_id > OrderItem.id [delete: No Action]

Ref: Refund.reviewed_by_id > Vendor.id [delete: Set Null]

Ref: RefundDispute.refund_id > Refund.id [delete: Cascade]

Ref: RefundDispute.issued_by_id > Vendor.id [delete: No Action]

Ref: InvoiceItem.invoice_id > Invoice.id [delete: Cascade]

Ref: Promotion.owner_id > Vendor.id [delete: Set Null]

Ref: PromotionDiscount.id > Promotion.id [delete: Cascade]

Ref: Event.account_id > Account.id [delete: Set Null]